@@ -70,6 +70,8 @@ public interface Context {
 
   ContainerManagementProtocol getContainerManager();
 
+  NodeResourceMonitor getNodeResourceMonitor();
+
   LocalDirsHandlerService getLocalDirsHandler();
 
   ApplicationACLsManager getApplicationACLsManager();
